[workspace]
members = [
  "example/zomes/example",
  "lib",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
holochain_wasmer_common = {git = "https://github.com/holochain/holochain-wasmer.git", branch = "debug/v0.0.73-wasmer-build-error"}
holochain_wasmer_guest = {git = "https://github.com/holochain/holochain-wasmer.git", branch = "debug/v0.0.73-wasmer-build-error"}
holochain_wasmer_host = {git = "https://github.com/holochain/holochain-wasmer.git", branch = "debug/v0.0.73-wasmer-build-error"}
