[package]
edition = "2018"
name = "example_ranking_index"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "example_ranking_index"

[dependencies]
derive_more = "0"
serde = "1"

hc_lib_ranking_index = {path = "../../../lib"}
hdk = "0.0.118"
holo_hash = {version = "0.0.15", features = ["encoding"]}

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
holochain = {version = "0.0.109", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
